fixed nav spacing FINALLY!!

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -30,7 +30,7 @@ nav ul li{
 	line-height: 49px;
 	border-right: solid 1px #fff;
 	text-align: center;
-	width: 16.123456789%;
+	width: 16.58%;
 	word-spacing:0;
 	letter-spacing:0;
 	}
